edit frontend design

--- a/public/frontend/css/bootstrap.css
+++ b/public/frontend/css/bootstrap.css
@@ -8575,7 +8575,7 @@ a.text-info:hover {
 }
 
 .text-warning {
-    color: #ffc107!important
+    color: #110066!important
 }
 
 a.text-warning:focus,
