--- a/public/frontend/css/responsive.css
+++ b/public/frontend/css/responsive.css
@@ -470,7 +470,7 @@ Version:1.0
 	position:fixed;
 	top:0;
 	left:0;
-	background:#fff;
+	background:#110066;
 	animation: fadeInDown 1s both 0.2s;
 	-webkit-box-shadow:0px 0px 10px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow:0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -486,6 +486,7 @@ Version:1.0
 }
 .header.shop .logo {
 	margin: 0;
+	width: 25%;
 }
 .section{
 	padding:50px 0px;
@@ -1108,7 +1109,7 @@ Version:1.0
 }
 .slicknav_nav li a{
 	margin: 0;
-	color: #333;
+	color: #ffffff;
 	background: transparent;
 	overflow: hidden;
 }
@@ -1205,6 +1206,8 @@ Version:1.0
 }
 .header.shop .topbar {
 	background: #fff;
+	display: none;
+	
 }
 .header.shop .topbar .top-left{
 	text-align:center;
