--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2944,7 +2944,7 @@ Version:1.0
 	padding:0px 50px;
 }
 .shopping-summery thead {
-	background: #F7941D;
+	background: #110066;
 	color: #fff;
 }
 .shopping-summery thead tr th {
